# Homework-24.1

./: README.md  pyproject.toml
config/: settings.py  urls.py
course/: admin.py  models.py
course/api/: serializers.py  urls.py  views.py
course/fixtures/: course_data.json
course/migrations/: 0001_initial.py
users/: models.py
users/api/: serializers.py  urls.py  views.py
users/fixtures/: users_data.json
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
